# orasort

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: large_scale_benchmark.rs  sorting_benchmark.rs
src/: algo.rs  core.rs  lib.rs
tests/: compatibility_test.rs  integration_tests.rs  repro_failure.rs  scale_tests.rs
